--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,6 +17,12 @@
   border-radius: 5px;
   background: #fd6e0a;
 }
+.header {
+  background: #fff8f3;
+  background-image: url("../images/header_bg.png") , url("../images/developer.png");
+  background-repeat: no-repeat;
+  background-position: bottom right , left;
+}
 
 /* header and nav style*/
 nav {
@@ -57,4 +63,48 @@ nav li {
   color: #757575;
   font-size: 18px;
   margin-bottom: 30px;
+}
+/* main section  */
+
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+/* about section style  */
+.about{
+  margin-top: 130px;
+  background: #FFF8F3;
+  border-radius: 10px;
+  padding:130px 150px;
+  text-align: center;
+}
+
+.section-title{
+  font-weight: 700;
+  font-size: 35px;
+  margin-bottom: 30px;
+}
+
+.section-description{
+  color: #757575;
+  font-size: 18px;
+  margin-bottom: 30px;
+
+}
+
+.about-info-container{
+  display: flex;
+  justify-content: space-around;
+}
+
+.info-title{
+  font-size: 20px;
+  color: #757575;
+}
+
+.info-description{
+  font-weight: 700;
+  font-size: 20px;
+  color: #474747;
 }
